@@ -40,7 +40,7 @@ public class DemoHTMLParser implements org.apache.lucene.benchmark.byTask.feeds.
     // body
     Reader r = p.getReader();
     char c[] = new char[1024];
-    StringBuffer bodyBuf = new StringBuffer();
+    StringBuilder bodyBuf = new StringBuilder();
     int n;
     while ((n = r.read(c)) >= 0) {
       if (n>0) {
@@ -65,14 +65,6 @@ public class DemoHTMLParser implements org.apache.lucene.benchmark.byTask.feeds.
     docData.setProps(props);
     docData.setDate(date);
     return docData;
-  }
-
-  /*
-   *  (non-Javadoc)
-   * @see org.apache.lucene.benchmark.byTask.feeds.HTMLParser#parse(java.lang.String, java.util.Date, java.lang.StringBuffer, java.text.DateFormat)
-   */
-  public DocData parse(DocData docData, String name, Date date, StringBuffer inputText, DateFormat dateFormat) throws IOException, InterruptedException {
-    return parse(docData, name, date, new StringReader(inputText.toString()), dateFormat);
   }
 
 }
