@@ -119,7 +119,7 @@ public class ReutersContentSource extends ContentSource {
       reader.readLine();// skip an empty line
       String title = reader.readLine();
       reader.readLine();// skip an empty line
-      StringBuffer bodyBuf = new StringBuffer(1024);
+      StringBuilder bodyBuf = new StringBuilder(1024);
       String line = null;
       while ((line = reader.readLine()) != null) {
         bodyBuf.append(line).append(' ');
